# Typethon

./: .gitignore  CLAUDE.md  README.md  TypeScript to Python transpilation feasibility - Claude.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml
TypeScript to Python transpilation feasibility - Claude_files/: isolated-segment.html  saved_resource(2).html  saved_resource.html
examples/: dot_product.ts
scripts/: build-site.mjs
site/: app.js  index.html  styles.css
src/: index.ts  transpiler.ts
test/: transpiler.test.ts
tests/: test_transpiler.py
typethon/: __init__.py  cli.py  transpiler.py
